--- a/vignettes/ParamOptimization_caracoles.Rmd
+++ b/vignettes/ParamOptimization_caracoles.Rmd
@@ -24,8 +24,8 @@ We start loading the package and the associated dataset. We set up 9 plots [...]
 
 ```{r}
 library(cxr)
-load(competition)
-load(salinity)
+data(competition)
+data(salinity)
 ```
 
 **Preparing the data**
@@ -150,20 +150,20 @@ write.results <- TRUE
 
 **Initialize results structure** 
 
-We will store the results of our analysis in a nested list, following the nested design of the experiment. For each focal species, we calculate three different models (given in \code{models}), and for each of these models, we obtain the parameterization from a series of optimization methods (given in \code{optim.methods}). Thus, we create a series of nested lists, named param.matrices, of the form:
+We will store the results of our analysis in a nested list, following the nested design of the experiment. For each focal species, we calculate three different models (given in \code{models}), and for each of these models, we obtain the parameterization from a series of optimization methods (given in \code{optim.methods}). Thus, we create a series of nested lists, named \code{param_estimates}, of the form:
 
-\code{param.matrices[[species]][[model]][[method]]}
+\code{param_estimates[[species]][[model]][[method]]}
 
 This is done with a series of nested loops:
 
 ```{r}
-param.matrices <- list()
+param_estimates <- list()
 for(i.sp in 1:length(focal.sp)){
-  param.matrices[[i.sp]] <- list()
+  param_estimates[[i.sp]] <- list()
   for(i.model in 1:length(models)){
-    param.matrices[[i.sp]][[i.model]] <- list()
+    param_estimates[[i.sp]][[i.model]] <- list()
     for(i.method in 1:length(optim.methods)){
-      param.matrices[[i.sp]][[i.model]][[i.method]] <- list(lambda = 0,
+      param_estimates[[i.sp]][[i.model]][[i.method]] <- list(lambda = 0,
                                                             lambda.lower.error = 0,
                                                             lambda.upper.error = 0,
                                                             sigma = 0,
@@ -178,11 +178,11 @@ for(i.sp in 1:length(focal.sp)){
                                                             alpha.cov.upper.error = 0,
                                                             log.likelihood = 0)
     }
-    names(param.matrices[[i.sp]][[i.model]]) <- optim.methods
+    names(param_estimates[[i.sp]][[i.model]]) <- optim.methods
   }
-  names(param.matrices[[i.sp]]) <- names(fitness.models)[models]
+  names(param_estimates[[i.sp]]) <- names(fitness.models)[models]
 }
-names(param.matrices) <- focal.sp
+names(param_estimates) <- focal.sp
 ```
 
 Now, we are ready to go, species by species, performing the analysis. As the main function, \code{cxr_optimize}, accepts the input for a single species, we code a loop for going through all species. Inside this loop, we include the following:
@@ -311,25 +311,25 @@ for(i.sp in 1:length(focal.sp)){
       ###############
       # 4) store results
       
-      param.matrices[[i.sp]][[i.model]][[i.method]]$lambda <- temp.results$lambda
-      param.matrices[[i.sp]][[i.model]][[i.method]]$lambda.lower.error <- temp.results$lambda.lower.error
-      param.matrices[[i.sp]][[i.model]][[i.method]]$lambda.upper.error <- temp.results$lambda.upper.error
+      param_estimates[[i.sp]][[i.model]][[i.method]]$lambda <- temp.results$lambda
+      param_estimates[[i.sp]][[i.model]][[i.method]]$lambda.lower.error <- temp.results$lambda.lower.error
+      param_estimates[[i.sp]][[i.model]][[i.method]]$lambda.upper.error <- temp.results$lambda.upper.error
       
-      param.matrices[[i.sp]][[i.model]][[i.method]]$sigma <- temp.results$sigma
+      param_estimates[[i.sp]][[i.model]][[i.method]]$sigma <- temp.results$sigma
       
-      param.matrices[[i.sp]][[i.model]][[i.method]]$alpha <- temp.results$alpha
-      param.matrices[[i.sp]][[i.model]][[i.method]]$alpha.upper.error <- temp.results$alpha.upper.error
-      param.matrices[[i.sp]][[i.model]][[i.method]]$alpha.lower.error <- temp.results$alpha.lower.error
+      param_estimates[[i.sp]][[i.model]][[i.method]]$alpha <- temp.results$alpha
+      param_estimates[[i.sp]][[i.model]][[i.method]]$alpha.upper.error <- temp.results$alpha.upper.error
+      param_estimates[[i.sp]][[i.model]][[i.method]]$alpha.lower.error <- temp.results$alpha.lower.error
       
-      param.matrices[[i.sp]][[i.model]][[i.method]]$lambda.cov <- temp.results$lambda.cov
-      param.matrices[[i.sp]][[i.model]][[i.method]]$lambda.cov.upper.error <- temp.results$lambda.cov.upper.error
-      param.matrices[[i.sp]][[i.model]][[i.method]]$lambda.cov.lower.error <- temp.results$lambda.cov.lower.error
+      param_estimates[[i.sp]][[i.model]][[i.method]]$lambda.cov <- temp.results$lambda.cov
+      param_estimates[[i.sp]][[i.model]][[i.method]]$lambda.cov.upper.error <- temp.results$lambda.cov.upper.error
+      param_estimates[[i.sp]][[i.model]][[i.method]]$lambda.cov.lower.error <- temp.results$lambda.cov.lower.error
       
-      param.matrices[[i.sp]][[i.model]][[i.method]]$alpha.cov <- temp.results$alpha.cov
-      param.matrices[[i.sp]][[i.model]][[i.method]]$alpha.cov.upper.error <- temp.results$alpha.cov.upper.error
-      param.matrices[[i.sp]][[i.model]][[i.method]]$alpha.cov.lower.error <- temp.results$alpha.cov.lower.error
+      param_estimates[[i.sp]][[i.model]][[i.method]]$alpha.cov <- temp.results$alpha.cov
+      param_estimates[[i.sp]][[i.model]][[i.method]]$alpha.cov.upper.error <- temp.results$alpha.cov.upper.error
+      param_estimates[[i.sp]][[i.model]][[i.method]]$alpha.cov.lower.error <- temp.results$alpha.cov.lower.error
       
-      param.matrices[[i.sp]][[i.model]][[i.method]]$log.likelihood <- temp.results$log.likelihood
+      param_estimates[[i.sp]][[i.model]][[i.method]]$log.likelihood <- temp.results$log.likelihood
       
     }# for i.method
     
@@ -338,21 +338,21 @@ for(i.sp in 1:length(focal.sp)){
     
     # lambda
     if("lambda" %in% param.list[[i.model]]){
-      if(!is.na(param.matrices[[i.sp]][[i.model]][[init.par.method]]$lambda)){
-        current.init.lambda <- param.matrices[[i.sp]][[i.model]][[init.par.method]]$lambda
+      if(!is.na(param_estimates[[i.sp]][[i.model]][[init.par.method]]$lambda)){
+        current.init.lambda <- param_estimates[[i.sp]][[i.model]][[init.par.method]]$lambda
       }
     }
     # sigma
-    if(!is.na(param.matrices[[i.sp]][[i.model]][[init.par.method]]$sigma)){
-      current.init.sigma <- param.matrices[[i.sp]][[i.model]][[init.par.method]]$sigma
+    if(!is.na(param_estimates[[i.sp]][[i.model]][[init.par.method]]$sigma)){
+      current.init.sigma <- param_estimates[[i.sp]][[i.model]][[init.par.method]]$sigma
       if(current.init.sigma > upper.sigma){
         current.init.sigma <- upper.sigma
       }
     }
     # alpha
     if("alpha" %in% param.list[[i.model]]){
-      if(sum(is.na(param.matrices[[i.sp]][[i.model]][[init.par.method]]$alpha)) == 0){
-        current.init.alpha <- param.matrices[[i.sp]][[i.model]][[init.par.method]]$alpha
+      if(sum(is.na(param_estimates[[i.sp]][[i.model]][[init.par.method]]$alpha)) == 0){
+        current.init.alpha <- param_estimates[[i.sp]][[i.model]][[init.par.method]]$alpha
         # is the current estimate of the appropriate length?
         if(i.model > 2){
           if(length(current.init.alpha) == 1){
@@ -363,14 +363,14 @@ for(i.sp in 1:length(focal.sp)){
     }
     # lambda.cov
     if("lambda.cov" %in% param.list[[i.model]]){
-      if(sum(is.na(param.matrices[[i.sp]][[i.model]][[init.par.method]]$lambda.cov)) == 0){
-        current.init.lambda.cov <- param.matrices[[i.sp]][[i.model]][[init.par.method]]$lambda.cov
+      if(sum(is.na(param_estimates[[i.sp]][[i.model]][[init.par.method]]$lambda.cov)) == 0){
+        current.init.lambda.cov <- param_estimates[[i.sp]][[i.model]][[init.par.method]]$lambda.cov
       }
     }
     # alpha.cov
     if("alpha.cov" %in% param.list[[i.model]]){
-      if(sum(is.na(param.matrices[[i.sp]][[i.model]][[init.par.method]]$alpha.cov)) == 0){
-        current.init.alpha.cov <- param.matrices[[i.sp]][[i.model]][[init.par.method]]$alpha.cov
+      if(sum(is.na(param_estimates[[i.sp]][[i.model]][[init.par.method]]$alpha.cov)) == 0){
+        current.init.alpha.cov <- param_estimates[[i.sp]][[i.model]][[init.par.method]]$alpha.cov
         # is the current estimate of the appropriate length?
         if(i.model > 4){
           if(length(current.init.alpha.cov) == num.covariates){
@@ -389,7 +389,7 @@ Finally, if we set the flag, the results will be written to disk
 
 ```{r}
 if(write.results){
-  save(param.matrices,file = "./results/param_estimates.Rdata")
+  save(param_estimates,file = "./results/param_estimates.Rdata")
 }
 ```
 
