--- a/vignettes/effect_response_caracoles.Rmd
+++ b/vignettes/effect_response_caracoles.Rmd
@@ -16,6 +16,7 @@ In this example we calculate per-species competitive responses and effects, as o
 
 ```{r}
 library(cxr)
+library(tidyverse)
 data(competition)
 ```
 
