--- a/vignettes/ParamOptimization_caracoles.Rmd
+++ b/vignettes/ParamOptimization_caracoles.Rmd
@@ -222,7 +222,7 @@ for(i.sp in 1:length(focal.sp)){
   # or gather them from data if they are not to be optimized
   
   # lambda
-  if("lambda" %in% param.list[[i.model]]){
+  if("lambda" %in% unlist(param.list)){
     current.init.lambda <- mean(log.fitness)
   }else{
     current.init.lambda <- init.lambda[i.sp]
@@ -233,8 +233,8 @@ for(i.sp in 1:length(focal.sp)){
     current.init.sigma <- upper.sigma
   }
   # alpha
-  if("alpha" %in% param.list[[i.model]]){
-    if(models[i.model]<=2){
+  if("alpha" %in% unlist(param.list)){
+    if(models[1]<=2){
       alpha.length <- 1
     }else{
       alpha.length <- num.competitors
@@ -248,7 +248,7 @@ for(i.sp in 1:length(focal.sp)){
     current.init.alpha <- init.alpha[i.sp,]
   }
   # lambda.cov
-  if("lambda.cov" %in% param.list[[i.model]]){
+  if("lambda.cov" %in% unlist(param.list)){
     if(length(init.lambda.cov) != num.covariates){
       current.init.lambda.cov <- rep(init.lambda.cov[1],num.covariates)
     }else{
@@ -258,10 +258,10 @@ for(i.sp in 1:length(focal.sp)){
     current.init.lambda.cov <- init.lambda.cov[i.sp]  
   }
   # alpha.cov
-  if("alpha.cov" %in% param.list[[i.model]]){
-    if(models[i.model]<=4){
+  if("alpha.cov" %in% unlist(param.list)){
+    if(models[1]<=4){
       length.alpha.cov <- num.covariates
-    }else if(models[i.model]>4){
+    }else if(models[1]>4){
       length.alpha.cov <- num.covariates*num.competitors
     }
     if(length(init.alpha.cov) != length.alpha.cov){
@@ -334,51 +334,52 @@ for(i.sp in 1:length(focal.sp)){
     }# for i.method
     
     #######################
-    # 5) update initial values for the different parameters
+    # 5) update initial values for the next model, if there is one
     
     # lambda
-    if("lambda" %in% param.list[[i.model]]){
-      if(!is.na(param_estimates[[i.sp]][[i.model]][[init.par.method]]$lambda)){
-        current.init.lambda <- param_estimates[[i.sp]][[i.model]][[init.par.method]]$lambda
+    if(i.model < length(param.list)){
+      if("lambda" %in% param.list[[i.model+1]]){
+        if(!is.na(param_estimates[[i.sp]][[i.model]][[init.par.method]]$lambda)){
+          current.init.lambda <- param_estimates[[i.sp]][[i.model]][[init.par.method]]$lambda
+        }
       }
-    }
-    # sigma
-    if(!is.na(param_estimates[[i.sp]][[i.model]][[init.par.method]]$sigma)){
-      current.init.sigma <- param_estimates[[i.sp]][[i.model]][[init.par.method]]$sigma
-      if(current.init.sigma > upper.sigma){
-        current.init.sigma <- upper.sigma
+      # sigma
+      if(!is.na(param_estimates[[i.sp]][[i.model]][[init.par.method]]$sigma)){
+        current.init.sigma <- param_estimates[[i.sp]][[i.model]][[init.par.method]]$sigma
+        if(current.init.sigma > upper.sigma){
+          current.init.sigma <- upper.sigma
+        }
       }
-    }
-    # alpha
-    if("alpha" %in% param.list[[i.model]]){
-      if(sum(is.na(param_estimates[[i.sp]][[i.model]][[init.par.method]]$alpha)) == 0){
-        current.init.alpha <- param_estimates[[i.sp]][[i.model]][[init.par.method]]$alpha
-        # is the current estimate of the appropriate length?
-        if(i.model > 2){
-          if(length(current.init.alpha) == 1){
-            current.init.alpha <- rep(current.init.alpha,num.competitors)
-          }
-        }# if model > 2
+      # alpha
+      if("alpha" %in% param.list[[i.model+1]]){
+        if(sum(is.na(param_estimates[[i.sp]][[i.model]][[init.par.method]]$alpha)) == 0){
+          current.init.alpha <- param_estimates[[i.sp]][[i.model]][[init.par.method]]$alpha
+          # is the current estimate of the appropriate length?
+          if(models[i.model+1] > 2){
+            if(length(current.init.alpha) == 1){
+              current.init.alpha <- rep(current.init.alpha,num.competitors)
+            }
+          }# if model > 2
+        }
       }
-    }
-    # lambda.cov
-    if("lambda.cov" %in% param.list[[i.model]]){
-      if(sum(is.na(param_estimates[[i.sp]][[i.model]][[init.par.method]]$lambda.cov)) == 0){
-        current.init.lambda.cov <- param_estimates[[i.sp]][[i.model]][[init.par.method]]$lambda.cov
+      # lambda.cov
+      if("lambda.cov" %in% param.list[[i.model+1]]){
+        if(sum(is.na(param_estimates[[i.sp]][[i.model]][[init.par.method]]$lambda.cov)) == 0){
+          current.init.lambda.cov <- param_estimates[[i.sp]][[i.model]][[init.par.method]]$lambda.cov
+        }
       }
-    }
-    # alpha.cov
-    if("alpha.cov" %in% param.list[[i.model]]){
-      if(sum(is.na(param_estimates[[i.sp]][[i.model]][[init.par.method]]$alpha.cov)) == 0){
-        current.init.alpha.cov <- param_estimates[[i.sp]][[i.model]][[init.par.method]]$alpha.cov
-        # is the current estimate of the appropriate length?
-        if(i.model > 4){
-          if(length(current.init.alpha.cov) == num.covariates){
-            current.init.alpha.cov <- rep(current.init.alpha.cov,num.competitors)
-          }
-        }# if model > 4
-      }
-    }
+      # alpha.cov
+      if("alpha.cov" %in% param.list[[i.model+1]]){
+        if(sum(is.na(param_estimates[[i.sp]][[i.model]][[init.par.method]]$alpha.cov)) == 0){
+          current.init.alpha.cov <- param_estimates[[i.sp]][[i.model]][[init.par.method]]$alpha.cov
+          # is the current estimate of the appropriate length?
+          if(models[i.model+1] > 4){
+            if(length(current.init.alpha.cov) == num.covariates){
+              current.init.alpha.cov <- rep(current.init.alpha.cov,num.competitors)
+            }
+          }# if model > 4
+        }
+      }# alpha.cov
     
   }# for i.model
 }# for i.sp
